# rust-wa

./: Cargo.toml  package-lock.json
.devcontainer/: Dockerfile  devcontainer.json  rc-files.txz
src/: lib.rs
static/: index.html
